tests/invalid/variables/bad_decl_2.rs
/*
compilationExitCode: 2
*/

main(): i32 {
    foo bar: i64 = 3;
    return bar;
}